# TechDay2026

./: .env  .gitignore  PROMPTS_PRUEBA_SWARM.md  vite.config.js
backend/: config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 0f32352911c0_add_transcription_table.py  99deab1ac885_initial_sat_models.py  cf0927083f5f_add_mattin_id_to_incidents.py  e948d52c837e_make_title_nullable_and_reported_by_.py
backend/modules/: audio.py  mcp.py  sat.py  swarm.py
frontend/: AGENTS.md  README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Modal.jsx  SchemaInfoButton.jsx  UseCaseFlows.js  UseCaseSchema.jsx
frontend/src/context/: ConfigContext.jsx
frontend/src/modules/audio/: AudioModule.css  AudioModule.jsx
frontend/src/modules/chat/: AGENTS.md  Chat.jsx
frontend/src/modules/ocr/: Ocr.jsx
frontend/src/modules/sat/: AGENTS.md  Sat.jsx
frontend/src/modules/sat/components/: CallCenterAgent.jsx  CreateIncident.jsx  (+5 more)
frontend/src/modules/sorteo/: AGENTS.md
frontend/src/modules/swarm/: SwarmModule.css  SwarmModule.jsx
frontend/src/pages/: ConfigPage.jsx  Home.jsx
mcps/mcp-sat/: AGENTS.md
src/: App.jsx  index.css
src/components/: FeaturePlaceholder.jsx
src/context/: ConfigContext.jsx
src/modules/chat/: Chat.jsx
src/modules/ocr/: AGENTS.md
src/modules/sat/: AGENTS.md  Sat.jsx
src/modules/sat/components/: ManageIncidents.jsx
src/modules/sorteo/: Sorteo.jsx
src/pages/: ConfigPage.jsx  Home.jsx
(+7 files in other folders)
